--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   <link rel="icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <meta name="description" content="Sell your TF2 keys instantly for PayPal or BTC. Fast, safe, 24/7 with MannCo Vault Bot." />
-  <meta property="og:title" content="MannCo Vault - TF2 Key Buyer" />
-  <meta property="og:description" content="Trusted 24/7 TF2 Key buyer. Get instant cash or crypto." />
-  <meta property="og:image" content="https://manncovaultbot.github.io/manncovault-site/preview.png" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://manncovaultbot.github.io/" />
-
   <style>
     body {
       margin: 0;
@@ -54,6 +47,7 @@
       margin: 0 15px;
       font-weight: bold;
       font-size: 16px;
+      transition: color 0.2s;
     }
 
     nav a:hover {
@@ -80,28 +74,13 @@
 
     .hero p {
       font-size: 20px;
+      color: #ddd;
     }
 
-    table {
-      width: 90%;
-      max-width: 800px;
-      margin: 20px auto;
-      border-collapse: collapse;
-      background: rgba(255, 255, 255, 0.05);
-      color: #ccc;
-      text-align: center;
-      font-size: 16px;
-    }
-
-    th, td {
-      padding: 12px;
-      border: 1px solid #333;
-    }
-
-    th {
-      background-color: #66c0f4;
-      color: #0e141b;
-      text-shadow: none;
+    #btcRate {
+      font-size: 18px;
+      color: #fae256;
+      margin-top: 10px;
     }
 
     .actions {
@@ -120,6 +99,7 @@
       padding: 20px;
       flex: 1 1 300px;
       text-align: center;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     }
 
     .box h3 {
@@ -129,38 +109,58 @@
     }
 
     .box p {
+      color: #ccc;
       font-size: 16px;
+      text-shadow: 1px 1px #000;
     }
 
     input, button {
       margin-top: 10px;
       padding: 10px;
       font-size: 16px;
+      font-family: inherit;
       border-radius: 4px;
       border: none;
-      font-family: inherit;
     }
 
-    input {
+    .price-box input, #btcInput {
       width: 100px;
       text-align: center;
     }
 
     .price-box button,
-    .payment-buttons button,
-    .toggle-btn {
+    .payment-buttons button {
       background: #66c0f4;
       color: #222;
       font-weight: bold;
       cursor: pointer;
+      transition: background 0.2s;
+      border-radius: 4px;
+      padding: 10px 20px;
     }
 
     .payment-buttons button:hover {
       background: #8f6a3b;
     }
 
-    .toggle-btn {
-      margin-top: 10px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 20px auto;
+      background: rgba(255, 255, 255, 0.05);
+      color: #ccc;
+      text-align: center;
+    }
+
+    th, td {
+      padding: 10px;
+      border: 1px solid #333;
+    }
+
+    th {
+      background: #66c0f4;
+      color: #0e141b;
+      text-shadow: none;
     }
 
     footer {
@@ -172,30 +172,24 @@
       border-top: 4px solid #66c0f4;
     }
 
-    select {
-      margin-top: 10px;
-      padding: 6px;
-      border-radius: 4px;
-      background-color: #1b2838;
-      color: #ccc;
-      border: 1px solid #66c0f4;
+    @media (max-width: 768px) {
+      .actions {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
     }
   </style>
 </head>
+
 <body>
   <header>
-    <h1>MannCo Vault Bot</h1>
-    <p>Your 24/7 Trusted TF2 Key Buyer — Fast, Safe & Secure</p>
-    <button class="toggle-btn" onclick="toggleMode()">🌙 Toggle Theme</button>
-    <div>
-      <select id="language-selector" onchange="changeLanguage()">
-        <option value="en">English</option>
-        <option value="zh">简体中文</option>
-        <option value="ja">日本語</option>
-        <option value="es">Español</option>
-        <option value="ru">Русский</option>
-      </select>
-    </div>
+    <h1>MannCo Vault</h1>
+    <p>Your Trusted 24/7 TF2 Key Buyer — Fast, Safe, Secure</p>
   </header>
 
   <nav>
@@ -208,26 +202,27 @@
 
   <section class="hero">
     <h2>Sell Your TF2 Keys Instantly</h2>
-    <p>We pay <strong>$2.00</strong> per key via PayPal or BTC. Just send a trade and include your payment details.</p>
-    <p><strong>Note:</strong> A BTC transaction fee of <strong>0.00001200 BTC (~$1.15)</strong> applies.</p>
-  </section>
+    <p>We pay <strong>$2.00</strong> per key via <strong>PayPal</strong> or <strong>Bitcoin (BTC)</strong>.</p>
+    <p><strong>Note:</strong> A Bitcoin network fee of <strong>0.00001200 BTC (~$1.15)</strong> applies to payouts.</p>
+    <p id="btcRate">⏳ Fetching current BTC price...</p>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Item</th>
-        <th>Buy Price (USD)</th>
-        <th>Buy Price (BTC)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Mann Co. Supply Crate Key</td>
-        <td>$2.00</td>
-        <td id="btc-price">Loading...</td>
-      </tr>
-    </tbody>
-  </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Buy Price (USD)</th>
+          <th>Buy Price (BTC)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mann Co. Supply Crate Key</td>
+          <td>$2.00</td>
+          <td id="btc-key-price">Loading...</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 
   <div class="actions">
     <div class="box price-box">
@@ -247,53 +242,53 @@
 
     <div class="box">
       <h3>📬 How to Sell</h3>
-      <p>1. Send trade to our Steam Bot</p>
-      <p>2. Include PayPal or BTC address in trade message</p>
+      <p>1. Send a trade to our <strong>Steam Bot</strong></p>
+      <p>2. Include your PayPal or BTC wallet in the trade message</p>
       <div class="payment-buttons">
         <button onclick="window.open('https://steamcommunity.com/tradeoffer/new/?partner=1548625626&token=nHnET_wK')">🚀 Send Trade</button>
-        <button onclick="window.open('https://steamcommunity.com/id/MannCoVaultBot/')">🤝 Add Bot</button>
+        <button onclick="window.open('https://steamcommunity.com/id/MannCoVaultBot')">🤝 Add Bot</button>
       </div>
     </div>
 
     <div class="box">
       <h3>🤖 Bot Instructions</h3>
-      <p>✅ Add the bot as friend<br>
-         ✅ Send trade with TF2 keys<br>
-         ✅ Add your payment info<br>
-         ✅ Bot auto-accepts & pays fast</p>
+      <p>✅ Add the bot as a friend<br>
+         ✅ Send a trade with TF2 keys only<br>
+         ✅ Include your payment info in the message<br>
+         ✅ Bot auto-accepts & sends payment</p>
     </div>
   </div>
 
   <footer>
-    &copy; 2025 MannCo Vault | Not affiliated with Valve. <br />
-    Issues? <a style="color: #66c0f4;" href="support.html">Contact Support</a>
+    &copy; 2025 MannCo Vault | Not affiliated with Valve or Steam.<br />
+    Contact us via <a style="color: #66c0f4;" href="support.html">Support</a>
   </footer>
 
   <script>
     let btcRate = 0;
-
-    function calcPrice() {
-      const keys = parseInt(document.getElementById('keyCount').value);
-      if (isNaN(keys) || keys <= 0) {
-        alert('Enter valid number of keys.');
-        return;
-      }
-      const usd = (keys * 2.00).toFixed(2);
-      document.getElementById('total').innerText = `You will receive $${usd}`;
-      if (btcRate > 0) {
-        document.getElementById('btcValue').innerText = `~ ${(usd / btcRate).toFixed(8)} BTC`;
-      }
-    }
 
     async function fetchBTC() {
       try {
         const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
         const data = await res.json();
         btcRate = data.bitcoin.usd;
-        document.getElementById('btc-price').innerText = `${(2.00 / btcRate).toFixed(8)} BTC`;
+
+        document.getElementById('btcRate').innerHTML = `₿ 1 BTC = <strong>$${btcRate.toLocaleString()}</strong> USD`;
+        document.getElementById('btc-key-price').innerText = `${(2.00 / btcRate).toFixed(8)} BTC`;
       } catch (e) {
-        document.getElementById('btc-price').innerText = 'Unavailable';
+        document.getElementById('btcRate').innerText = '⚠️ Failed to fetch BTC price.';
       }
+    }
+
+    function calcPrice() {
+      const keys = parseInt(document.getElementById('keyCount').value);
+      if (!keys || keys < 1) {
+        alert('Enter a valid key count.');
+        return;
+      }
+      const usd = keys * 2.00;
+      const btc = btcRate > 0 ? ` (~${(usd / btcRate).toFixed(8)} BTC)` : '';
+      document.getElementById('total').innerText = `Total: $${usd.toFixed(2)}${btc}`;
     }
 
     document.getElementById('btcInput').addEventListener('input', () => {
@@ -305,24 +300,8 @@
       }
     });
 
-    function toggleMode() {
-      document.body.classList.toggle('light-mode');
-      const isLightMode = document.body.classList.contains('light-mode');
-      localStorage.setItem('theme', isLightMode ? 'light' : 'dark');
-    }
-
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme === 'light') {
-      document.body.classList.add('light-mode');
-    }
-
-    function changeLanguage() {
-      const lang = document.getElementById('language-selector').value;
-      alert(`Language switched to ${lang.toUpperCase()}`);
-    }
-
     fetchBTC();
-    setInterval(fetchBTC, 60000);
+    setInterval(fetchBTC, 60000); // update every 60s
   </script>
 </body>
 </html>
