--- a/commands.html
+++ b/commands.html
@@ -53,32 +53,24 @@
 
     h2 {
       color: #66c0f4;
-      margin-bottom: 20px;
-    }
-
-    .command-list {
-      background-color: rgba(255, 255, 255, 0.05);
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      margin-bottom: 30px;
+      font-size: 26px;
     }
 
     .command {
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
 
-    .command code {
-      background-color: #2b2b2b;
-      color: #66c0f4;
-      padding: 6px 10px;
-      border-radius: 4px;
-      font-family: monospace;
-      display: inline-block;
+    .command h3 {
+      color: #fff;
+      font-size: 20px;
+      margin: 0 0 8px 0;
     }
 
     .command p {
-      margin: 8px 0 0 0;
       color: #ccc;
+      line-height: 1.6;
+      margin: 0;
     }
 
     footer {
@@ -102,41 +94,46 @@
   </nav>
 
   <main>
-    <h2>📜 LIST OF COMMANDS</h2>
-    <div class="command-list">
-      <div class="command">
-        <code>!help</code>
-        <p>Show this command list</p>
-      </div>
-      <div class="command">
-        <code>!sell</code>
-        <p>Instructions on how to sell TF2 keys</p>
-      </div>
-      <div class="command">
-        <code>!prices</code>
-        <p>Displays current TF2 key buy price</p>
-      </div>
-      <div class="command">
-        <code>!priceof [number]</code>
-        <p>Calculate total price in USD and BTC for your keys</p>
-      </div>
-      <div class="command">
-        <code>!sendoffer</code>
-        <p>Get the bot’s trade offer link</p>
-      </div>
-      <div class="command">
-        <code>!stock</code>
-        <p>See how many keys the bot can buy right now</p>
-      </div>
-      <div class="command">
-        <code>!support</code>
-        <p>Contact the bot owner for help</p>
-      </div>
+    <h2>📜 Steam Bot Command List</h2>
+
+    <div class="command">
+      <h3>!help</h3>
+      <p>Show this command list</p>
+    </div>
+
+    <div class="command">
+      <h3>!sell</h3>
+      <p>How to sell TF2 keys</p>
+    </div>
+
+    <div class="command">
+      <h3>!prices</h3>
+      <p>Show current buy price</p>
+    </div>
+
+    <div class="command">
+      <h3>!priceof [number]</h3>
+      <p>Calculate price in USD + BTC</p>
+    </div>
+
+    <div class="command">
+      <h3>!sendoffer</h3>
+      <p>Get my trade offer link</p>
+    </div>
+
+    <div class="command">
+      <h3>!stock</h3>
+      <p>Show how many keys I can buy</p>
+    </div>
+
+    <div class="command">
+      <h3>!support</h3>
+      <p>Contact the bot owner for help</p>
     </div>
   </main>
 
   <footer>
-    &copy; 2025 MannCo Vault | Bot Commands — Powered by Steam
+    &copy; 2025 MannCo Vault | Secure & Trusted TF2 Key Buyer
   </footer>
 </body>
 </html>
