--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
     }
 
     #btcRate {
-      font-size: 18px;
-      color: #fae256;
-      margin-top: 10px;
+      font-size: 28px;
+      font-weight: bold;
+      color: #f8d90f;
+      background-color: rgba(0, 0, 0, 0.3);
+      padding: 10px 20px;
+      border-radius: 8px;
+      display: inline-block;
+      margin-top: 15px;
+      text-shadow: 1px 1px #000;
     }
 
     .actions {
