--- a/pricing.html
+++ b/pricing.html
@@ -28,6 +28,12 @@
       text-shadow: 2px 2px #000;
     }
 
+    #btcRate {
+      font-size: 18px;
+      color: #fae256;
+      margin-top: 10px;
+    }
+
     nav {
       background-color: #171a21;
       padding: 10px;
@@ -47,37 +53,52 @@
 
     main {
       padding: 40px 20px;
-      text-align: center;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #66c0f4;
+      margin-bottom: 30px;
+      font-size: 26px;
     }
 
     table {
-      width: 80%;
-      margin: 0 auto;
+      width: 100%;
       border-collapse: collapse;
       background: rgba(255, 255, 255, 0.05);
       color: #ccc;
+      text-align: center;
     }
 
     th, td {
-      padding: 15px;
+      padding: 12px;
       border: 1px solid #333;
     }
 
     th {
-      background-color: #66c0f4;
-      color: #111;
+      background: #66c0f4;
+      color: #0e141b;
+      text-shadow: none;
+    }
+
+    td {
+      font-size: 16px;
     }
 
     footer {
       border-top: 4px solid #66c0f4;
       color: #aaa;
       font-size: 14px;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>MannCo Vault - Pricing</h1>
+    <div id="btcRate">⏳ Fetching BTC price...</div>
   </header>
 
   <nav>
@@ -89,7 +110,7 @@
   </nav>
 
   <main>
-    <h2>TF2 Key Buy Prices</h2>
+    <h2>📊 TF2 Key Buy Prices</h2>
     <table>
       <thead>
         <tr>
@@ -102,14 +123,17 @@
         <tr>
           <td>Mann Co. Supply Crate Key</td>
           <td>$2.00</td>
-          <td id="btc-key">Loading...</td>
+          <td id="btc-key-price">Loading...</td>
         </tr>
       </tbody>
     </table>
+
+    <p style="margin-top: 20px; color: #aaa;">Prices are updated in real-time. BTC payout includes a network fee of <strong>0.00001200 BTC (~$1.15)</strong>.</p>
   </main>
 
   <footer>
-    &copy; 2025 MannCo Vault | Not affiliated with Valve Corporation
+    &copy; 2025 MannCo Vault | Not affiliated with Valve or Steam.<br />
+    Contact us via <a style="color: #66c0f4;" href="support.html">Support</a>
   </footer>
 
   <script>
@@ -118,12 +142,15 @@
         const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
         const data = await res.json();
         const btcRate = data.bitcoin.usd;
-        document.getElementById('btc-key').innerText = (2.00 / btcRate).toFixed(8) + " BTC";
+        document.getElementById('btcRate').innerHTML = `₿ 1 BTC = <strong>$${btcRate.toLocaleString()}</strong> USD`;
+        document.getElementById('btc-key-price').innerText = `${(2.00 / btcRate).toFixed(8)} BTC`;
       } catch (e) {
-        document.getElementById('btc-key').innerText = "Unavailable";
+        document.getElementById('btcRate').innerText = '⚠️ Failed to fetch BTC price.';
       }
     }
+
     fetchBTC();
+    setInterval(fetchBTC, 60000); // update every 60s
   </script>
 </body>
 </html>
