--- a/index.html
+++ b/index.html
@@ -198,13 +198,15 @@
     <p>Your Trusted 24/7 TF2 Key Buyer — Fast, Safe, Secure</p>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="commands.html">Commands</a>
-    <a href="pricing.html">Pricing</a>
-    <a href="faq.html">FAQ</a>
-    <a href="support.html">Support</a>
-  </nav>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="commands.html">Commands</a>
+  <a href="pricing.html">Pricing</a>
+  <a href="faq.html">FAQ</a>
+  <a href="support.html">Support</a>
+  <a href="terms.html">Terms</a>
+  <a href="privacy.html">Privacy</a>
+</nav> 
 
   <section class="hero">
     <h2>Sell Your TF2 Keys Instantly</h2>
