--- a/pricing.html
+++ b/pricing.html
@@ -101,13 +101,15 @@
     <div id="btcRate">⏳ Fetching BTC price...</div>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="commands.html">Commands</a>
-    <a href="pricing.html">Pricing</a>
-    <a href="faq.html">FAQ</a>
-    <a href="support.html">Support</a>
-  </nav>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="commands.html">Commands</a>
+  <a href="pricing.html">Pricing</a>
+  <a href="faq.html">FAQ</a>
+  <a href="support.html">Support</a>
+  <a href="terms.html">Terms</a>
+  <a href="privacy.html">Privacy</a>
+</nav> 
 
   <main>
     <h2>📊 TF2 Key Buy Prices</h2>
