--- a/index.html
+++ b/index.html
@@ -14,33 +14,28 @@
       background-color: #171a21;
       color: #ccc;
     }
-
     header {
       background-color: #1b2838;
       padding: 20px;
       text-align: center;
       border-bottom: 4px solid #66c0f4;
     }
-
     header h1 {
       font-size: 48px;
       margin: 0;
       color: #66c0f4;
       text-shadow: 2px 2px #000;
     }
-
     header p {
       font-size: 18px;
       color: #ddd;
       margin-top: 10px;
     }
-
     nav {
       background-color: #171a21;
       padding: 10px;
       text-align: center;
     }
-
     nav a {
       color: #66c0f4;
       text-decoration: none;
@@ -49,11 +44,9 @@
       font-size: 16px;
       transition: color 0.2s;
     }
-
     nav a:hover {
       color: #fff;
     }
-
     .hero {
       background-image: url('https://cdn.cloudflare.steamstatic.com/store/home/store_home_share.jpg');
       background-size: cover;
@@ -65,18 +58,15 @@
       color: #fff;
       text-shadow: 2px 2px #000;
     }
-
     .hero h2 {
       font-size: 36px;
       color: #8f6a3b;
       margin-bottom: 10px;
     }
-
     .hero p {
       font-size: 20px;
       color: #ddd;
     }
-
     #btcRate {
       font-size: 28px;
       font-weight: bold;
@@ -88,7 +78,6 @@
       margin-top: 15px;
       text-shadow: 1px 1px #000;
     }
-
     .actions {
       display: flex;
       flex-wrap: wrap;
@@ -97,7 +86,6 @@
       margin: 40px auto;
       max-width: 1100px;
     }
-
     .box {
       background: rgba(20, 20, 20, 0.85);
       border: 2px solid #66c0f4;
@@ -107,19 +95,16 @@
       text-align: center;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     }
-
     .box h3 {
       color: #66c0f4;
       margin-bottom: 10px;
       font-size: 22px;
     }
-
     .box p {
       color: #ccc;
       font-size: 16px;
       text-shadow: 1px 1px #000;
     }
-
     input, button {
       margin-top: 10px;
       padding: 10px;
@@ -128,12 +113,10 @@
       border-radius: 4px;
       border: none;
     }
-
     .price-box input, #btcInput {
       width: 100px;
       text-align: center;
     }
-
     .price-box button,
     .payment-buttons button {
       background: #66c0f4;
@@ -144,11 +127,9 @@
       border-radius: 4px;
       padding: 10px 20px;
     }
-
     .payment-buttons button:hover {
       background: #8f6a3b;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
@@ -157,18 +138,15 @@
       color: #ccc;
       text-align: center;
     }
-
     th, td {
       padding: 10px;
       border: 1px solid #333;
     }
-
     th {
       background: #66c0f4;
       color: #0e141b;
       text-shadow: none;
     }
-
     footer {
       text-align: center;
       padding: 20px;
@@ -177,13 +155,11 @@
       color: #aaa;
       border-top: 4px solid #66c0f4;
     }
-
     @media (max-width: 768px) {
       .actions {
         flex-direction: column;
         align-items: center;
       }
-
       nav a {
         display: block;
         margin: 10px 0;
@@ -191,63 +167,64 @@
     }
   </style>
 </head>
-
 <body>
   <header>
     <h1>MannCo Vault</h1>
     <p>Your Trusted 24/7 TF2 Key Buyer — Fast, Safe, Secure</p>
   </header>
-
-<nav>
-  <a href="index.html">Home</a>
-  <a href="commands.html">Commands</a>
-  <a href="pricing.html">Pricing</a>
-  <a href="faq.html">FAQ</a>
-  <a href="support.html">Support</a>
-  <a href="terms.html">Terms</a>
-  <a href="privacy.html">Privacy</a>
-</nav> 
-
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="commands.html">Commands</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="faq.html">FAQ</a>
+    <a href="support.html">Support</a>
+    <a href="terms.html">Terms</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>
   <section class="hero">
     <h2>Sell Your TF2 Keys Instantly</h2>
     <p>We pay <strong>$2.00</strong> per key via <strong>PayPal</strong> or <strong>Bitcoin (BTC)</strong>.</p>
     <p><strong>Note:</strong> A Bitcoin network fee of <strong>0.00001200 BTC (~$1.15)</strong> applies to payouts.</p>
     <p id="btcRate">⏳ Fetching current BTC price...</p>
-
     <table>
       <thead>
         <tr>
           <th>Item</th>
           <th>Buy Price (USD)</th>
+          <th>Sell Price (USD)</th>
           <th>Buy Price (BTC)</th>
+          <th>Sell Price (BTC)</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>Mann Co. Supply Crate Key</td>
           <td>$2.00</td>
-          <td id="btc-key-price">Loading...</td>
+          <td>$2.10</td>
+          <td id="btc-key-buy">Loading...</td>
+          <td id="btc-key-sell">Loading...</td>
         </tr>
       </tbody>
     </table>
   </section>
-
   <div class="actions">
     <div class="box price-box">
       <h3>💰 Price Calculator</h3>
       <p>How many keys?</p>
       <input type="number" id="keyCount" min="1" placeholder="Enter keys" />
+      <div style="margin: 10px 0;">
+        <label><input type="radio" name="mode" value="sell" checked> Sell</label>
+        <label style="margin-left: 15px;"><input type="radio" name="mode" value="buy"> Buy</label>
+      </div>
       <button onclick="calcPrice()">Calculate</button>
       <p id="total"></p>
     </div>
-
     <div class="box">
       <h3>₿ BTC Estimator</h3>
       <p>Enter USD Amount:</p>
       <input type="number" id="btcInput" placeholder="$ amount" />
       <p id="btcValue"></p>
     </div>
-
     <div class="box">
       <h3>📬 How to Sell</h3>
       <p>1. Send a trade to our <strong>Steam Bot</strong></p>
@@ -257,7 +234,6 @@
         <button onclick="window.open('https://steamcommunity.com/id/MannCoVaultBot')">🤝 Add Bot</button>
       </div>
     </div>
-
     <div class="box">
       <h3>🤖 Bot Instructions</h3>
       <p>✅ Add the bot as a friend<br>
@@ -266,39 +242,36 @@
          ✅ Bot auto-accepts & sends payment</p>
     </div>
   </div>
-
   <footer>
     &copy; 2025 MannCo Vault | Not affiliated with Valve or Steam.<br />
     Contact us via <a style="color: #66c0f4;" href="support.html">Support</a>
   </footer>
-
   <script>
     let btcRate = 0;
-
     async function fetchBTC() {
       try {
         const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
         const data = await res.json();
         btcRate = data.bitcoin.usd;
-
         document.getElementById('btcRate').innerHTML = `₿ 1 BTC = <strong>$${btcRate.toLocaleString()}</strong> USD`;
-        document.getElementById('btc-key-price').innerText = `${(2.00 / btcRate).toFixed(8)} BTC`;
+        document.getElementById('btc-key-buy').innerText = `${(2.00 / btcRate).toFixed(8)} BTC`;
+        document.getElementById('btc-key-sell').innerText = `${(2.10 / btcRate).toFixed(8)} BTC`;
       } catch (e) {
         document.getElementById('btcRate').innerText = '⚠️ Failed to fetch BTC price.';
       }
     }
-
     function calcPrice() {
       const keys = parseInt(document.getElementById('keyCount').value);
+      const mode = document.querySelector('input[name="mode"]:checked')?.value || 'sell';
       if (!keys || keys < 1) {
         alert('Enter a valid key count.');
         return;
       }
-      const usd = keys * 2.00;
+      const pricePerKey = mode === 'buy' ? 2.10 : 2.00;
+      const usd = keys * pricePerKey;
       const btc = btcRate > 0 ? ` (~${(usd / btcRate).toFixed(8)} BTC)` : '';
-      document.getElementById('total').innerText = `Total: $${usd.toFixed(2)}${btc}`;
+      document.getElementById('total').innerText = `Total (${mode === 'buy' ? 'Buy' : 'Sell'}): $${usd.toFixed(2)}${btc}`;
     }
-
     document.getElementById('btcInput').addEventListener('input', () => {
       const usd = parseFloat(document.getElementById('btcInput').value);
       if (!isNaN(usd) && btcRate > 0) {
@@ -307,9 +280,8 @@
         document.getElementById('btcValue').innerText = '';
       }
     });
-
     fetchBTC();
-    setInterval(fetchBTC, 60000); // update every 60s
+    setInterval(fetchBTC, 60000);
   </script>
 </body>
 </html>
