--- a/commands.html
+++ b/commands.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -94,15 +95,15 @@
     <div id="btcRate">⏳ Fetching BTC price...</div>
   </header>
 
- <nav>
-  <a href="index.html">Home</a>
-  <a href="commands.html">Commands</a>
-  <a href="pricing.html">Pricing</a>
-  <a href="faq.html">FAQ</a>
-  <a href="support.html">Support</a>
-  <a href="terms.html">Terms</a>
-  <a href="privacy.html">Privacy</a>
-</nav> 
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="commands.html">Commands</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="faq.html">FAQ</a>
+    <a href="support.html">Support</a>
+    <a href="terms.html">Terms</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>
 
   <main>
     <h2>📜 Steam Bot Command List</h2>
@@ -118,13 +119,23 @@
     </div>
 
     <div class="command">
-      <h3>!prices</h3>
-      <p>Show current buy price</p>
+      <h3>!sell [number]</h3>
+      <p>Calculate how much you will receive and send the bot trade URL link and a note - Include your <strong>PayPal email or BTC address</strong> in the trade message.</p>
     </div>
 
     <div class="command">
-      <h3>!priceof [number]</h3>
-      <p>Calculate price in USD + BTC</p>
+      <h3>!buy</h3>
+      <p>Instructions on how to buy TF2 keys</p>
+    </div>
+
+    <div class="command">
+      <h3>!buy [number]</h3>
+      <p>Calculate how much you need to pay and receive PayPal and BTC payment info. After payment, type <strong>payment sent</strong> to verify.</p>
+    </div>
+
+    <div class="command">
+      <h3>!price</h3>
+      <p>Show current buy and sell price</p>
     </div>
 
     <div class="command">
