--- a/faq.html
+++ b/faq.html
@@ -92,32 +92,42 @@
     <div id="btcRate">⏳ Fetching BTC price...</div>
   </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="commands.html">Commands</a>
-  <a href="pricing.html">Pricing</a>
-  <a href="faq.html">FAQ</a>
-  <a href="support.html">Support</a>
-  <a href="terms.html">Terms</a>
-  <a href="privacy.html">Privacy</a>
-</nav> 
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="commands.html">Commands</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="faq.html">FAQ</a>
+    <a href="support.html">Support</a>
+    <a href="terms.html">Terms</a>
+    <a href="privacy.html">Privacy</a>
+  </nav> 
 
   <main>
     <h2>❓ Frequently Asked Questions</h2>
 
     <div class="faq">
       <h3>💬 How do I sell keys?</h3>
-      <p>Send a trade to our bot and include your PayPal or BTC address in the message. Payment is sent within 1–3 minutes.</p>
+      <p>Add our Steam bot and send a trade offer with your TF2 keys. In the trade message, include your PayPal email or BTC wallet address. The bot will auto-accept and send your payment within 1–3 minutes.</p>
     </div>
 
     <div class="faq">
-      <h3>💰 What is the current price per key?</h3>
-      <p>We buy TF2 keys at $2.00 or equivalent in Bitcoin. You can check our <a href="pricing.html" style="color:#66c0f4;">Pricing</a> page for the live BTC rate.</p>
+      <h3>🛒 How do I buy keys?</h3>
+      <p>Message the bot with <code>!buy [number]</code> (e.g. <code>!buy 5</code>) and it will reply with the total cost and payment instructions (PayPal or BTC). Once you’ve sent the payment, reply <strong>payment sent</strong> and the bot will verify and send your keys.</p>
+    </div>
+
+    <div class="faq">
+      <h3>💰 What are the current prices?</h3>
+      <p>We <strong>buy TF2 keys for $2.00</strong> and <strong>sell for $2.10</strong> each. You can also pay in Bitcoin. Visit our <a href="pricing.html" style="color:#66c0f4;">Pricing</a> page to check real-time BTC rates.</p>
     </div>
 
     <div class="faq">
       <h3>🔐 Is it safe?</h3>
-      <p>Yes! MannCo Vault has helped hundreds of traders. Our automated bot handles trades securely, with no middleman required.</p>
+      <p>Yes! MannCo Vault is 100% automated and secure. Our bot uses Steam’s official trade and confirmation system. No middlemen, no delays.</p>
+    </div>
+
+    <div class="faq">
+      <h3>⏱️ How long does payment take?</h3>
+      <p>Payments are processed instantly once your trade is accepted. BTC may take a few minutes depending on the network. You’ll be updated throughout the process by the bot.</p>
     </div>
   </main>
 
