--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <body>
   <header>
     <div class="steam-login">
-      <a href="/auth/steam">
+      <a href="https://3fe5-2001-4455-4f6-1000-5d38-e357-5e9c-ca27.ngrok-free.app/auth/steam">
         <img src="https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_large_noborder.png" alt="Sign in through Steam" style="height: 40px;">
       </a>
     </div>
